<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="fragments.HomeFragment">

    <TextView
        android:id="@+id/page_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_registration_form"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/name"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname_lastname"
        android:autofillHints="name" />
    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:autofillHints="emailAddress"/>

    <EditText
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginBottom="20dp"
        android:autofillHints="username"
        android:id="@+id/user_name"
        />
    <EditText
        android:autofillHints="phone"
        android:id="@+id/mobile"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"/>

    <Spinner
        android:layout_marginTop="20dp"
        android:id="@+id/sexSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/passWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:backgroundTint="@color/green"/>



        <TextView
            android:id="@+id/already_text"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/teal_700"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/news_letters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_me_newsletters"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox

            android:id="@+id/checkbox"
            android:layout_width="30dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/news_letters"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>